css/main.css
:root {
    --box-filter-min-dealt-rgb: 255, 85, 85;
    --box-filter-max-taken-rgb: 98, 114, 164;
    --box-filter-speed-rgb: 139, 233, 253;
    --box-filter-ohko-rgb: 80, 250, 123;
    --box-filter-ohkod-rgb: 255, 85, 85;
}

/* header */
a img {
    border: 0;
}
.wrapper * {
    box-sizing: content-box;
/*    max-width: 1980px;*/
    
 }

/* Hide scrollbars but keep scrolling functionality */
* {
    /* Firefox */
    scrollbar-width: none;
    
    /* IE/Edge */
    -ms-overflow-style: none;
}

/* Webkit browsers (Chrome, Safari, Opera) */
*::-webkit-scrollbar {
    display: none;
}

input[type="file"] {
  display: none;
}

/*fieldset #read-save {
    margin: 0;
}*/


.terminal-output span {
    cursor: pointer;
}

#download-sav {
  border: 1px solid #bb86fc;
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
  color: #bb86fc;
  margin-left: 10px;
  background: none;
}


.switch-info {
    color: #1abc9c;
}

#redux-lvl {
    color: #bb86fc;
    font-size: 12px;
    display: inline-block;
    cursor: pointer;
    display: none;
}


.filterable.doc-enc {
    background: #383a59;
}

#mastersheet .encounter-wilds {
    width: 100%;
}

.ms-move .move-power, .ms-move .move-accuracy {
    text-align: center;
}



.ms-move .move-name {
    margin-left:  0px;
}

.ms-move {
    padding: 0px 8px;
}

#submit-ms {
    display: none;
}

#manip-lvl {
    margin: 0;
    margin-left: 20px;
}

.trainer-name:hover {
    cursor: pointer;
    border:  1px solid #1abc9c;
}

.ms-enc-main-header {
    display: flex;
    align-items: center;
}

::-webkit-scrollbar {
  display: none;
}
.header {
    margin: 0 0 30px 0;

    background: #E5ECFB;
    background: -webkit-gradient(linear, left top, left bottom, from(#E8EEFC), to(#D7DEEA));
    background: -moz-linear-gradient(top,  #E8EEFC,  #D7DEEA);
    background: linear-gradient(top,  #E8EEFC,  #D7DEEA);
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8EEFC', endColorstr='#D7DEEA');

    border-bottom: 1px solid #AAA;
    box-shadow: inset 1px 1px 0 rgba(255, 255, 255, .6), 0px 2px 2px rgba(0, 0, 0, .15);
    min-height: 50px;
}

.crit-text {
    color:  #FF5555;
}

.menu-item:hover {
    text-decoration: underline;
}


#lvl-cap {
    padding:  4px;
    width:  60px;
    display: none;
    height: 40px;
    text-align: center;
    font-size: 22px;
}

#lvl-cap:focus + #apply-cap {
  display: inline-block;
}

#apply-cap {
    display: none;
    font-weight: 200;
    font-size: 16px;
    cursor: pointer;
    color: #bb86fc;
    display: none;
}

#reasoning {
    padding: 20px;
    font-size: 20px;
    margin-top: 20px;
    display: none;
}

#ai-tags, #player-tags, #mobile-tags {
    position: absolute;
    display: flex;
    top: 71px;
    cursor: pointer;
    left: 16px;
    font-size: 12px;
    z-index: 12;
}

.ai-tag {
    display: none;
}

#player-tags {
    justify-content: space-between;
    width: calc(100% - 12px);
    left: 10px;
}

#tags-left, #tags-right {
    display: flex;
}



.info-group.top {
    min-height: 100px;
}

#ai-tags, #nav-tags, #mobile-tags {
    position: absolute;
    display: flex;
    top: 71px;
    cursor: pointer;
    right: 16px;
    font-size: 16px;
    z-index: 12;
}



#ai-tags div, #nav-tags div, #mobile-tags div, #learnset-show, #box-remove, #save-pok, #add-party-pok, #met-loc, #frag-count, #dex-show {
    line-height: 20px;
    margin-right: 10px;
    color: #bb86fc;
    border-radius: 5px;
    border: 1px solid #bb86fc;
    padding: 0px 4px;
    display: none;
}

#tags-left div:hover {
    background: rgba(255,255,255,0.1);
}

#nav-tags .next {
    margin-right: 0px;
}

#nav-tags .next:hover , #nav-tags .prev:hover {
    background: rgba(255,255,255, 0.1);
}

#nav-tags .bad-odds {
    color: #ff79c6;
    border: 1px solid #ff79c6;
    margin-right: 10px;
}

#ai-tags div {
    display: flex;
    font-size: 10px;
}

#met-loc, #frag-count {
    color: #f8f8f2;
    border: 1px solid rgb(118, 118, 118);
    background: rgba(12,12,12,0.5);
}

.bp-info {
    font-size: 14px;
    min-height: 17px;
}

.bp-last {
    margin-bottom: 10px;
}

.type-mu {
    color: #ff5555;
}

.p2-dmg {
    color: #1abc9c;
}

.exp-bar {
    font-size: 12px;
    margin-top: 10px;
    width: 100%;
    position: relative;
    height: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.exp-bar::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 50%;
    height: 4px;
    transform: translateY(-50%);
    background: rgba(255,255,255,0.08);
    border-radius: 999px;
    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.14);
}

.exp-bar-fill {
    position: absolute;
    left: 0;
    top: 50%;
    height: 4px;
    transform: translateY(-50%);
    background: rgb(68, 146, 224);
    border-radius: 999px;
}

.exp-bar-label {
    position: relative;
    z-index: 1;
    display: block;
    line-height: 1;
    color: #f8f8f2;
    text-shadow: 0 1px 2px rgba(0,0,0,0.45);
    transform: translateY(12px);
}

.poke-null .switch-infos, .poke-null .mu-info {
    display: none !important;
}

.bp-info.nopp {
    text-decoration: line-through;
}



#ai-tags div {
    color: #bb86fc;
    background: none;
    max-height: 20px;
    overflow: hidden;
}

#learnset-show {
    display: none;
}

#box-remove {
    color: #FF5555;
    border: 1px solid #f55555;
    display: block;
}

#learnset-container {
    position: fixed;
    background: #f8f8f2;
    height:  80vh;
    width:  400px;
    left: calc(50vw - 200px);
    top:  10vh;
    display:  none;
    z-index: 10000;
    border-radius:  5px;
    border:  2px solid black;
    color: black;
    overflow: scroll;
    padding-bottom: 20px
}

#learnset-container h2 {
    margin: 20px;
    border-bottom:  1px solid black;
}

.close-modal {
    position: absolute;
    cursor: pointer;
    height: 40px;
    width: 40px;
    top: 4px;
    right: 4px;
    fill: red;
    background: #f8f8f2;

}
/* ... */

